--- a/public/index.html
+++ b/public/index.html
@@ -38,8 +38,8 @@
     </div>
     
     <div id="overlay" class="overlay">
-        <div class="gameTitle">Appventure</div>
-        <br><br><br>Spiel starten...
+        <div class="game-title">The Appventure</div>
+        <br><br>Spiel starten...
     </div>
     
     <div id="overlay_txt_active" class="overlay_txt_active"></div>
