--- a/public/index.html
+++ b/public/index.html
@@ -26,6 +26,7 @@
         <my-obj id="btn_view"  class="menu_item">Betrachte</my-obj>
         <my-obj id="btn_use"   class="menu_item">Verwende</my-obj>
         <my-obj id="btn_take"  class="menu_item">Nimm</my-obj>
+        <my-obj id="btn_dev"  class="menu_item">dev</my-obj>
     </div>
     
     <div id="inventory" class="inventory"></div>
