game3.js renamed to appventure.js

--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
 
     
     <script src="story.js" type="module"></script>
-    <script src="game3.js" type="module"></script>
+    <script src="appventure.js" type="module"></script>
     
     <!-- my-obj id="bg">
         <img src="res/bg.jpg"></img>
