2024-05-30 v1.0 first version online

--- a/public/index.html
+++ b/public/index.html
@@ -27,7 +27,7 @@
     <my-obj id="btn_view"  class="menu_item">Betrachte</my-obj>
     <my-obj id="btn_use"   class="menu_item">Verwende</my-obj>
     <my-obj id="btn_take"  class="menu_item">Nimm</my-obj>
-    <my-obj id="btn_dev"  class="menu_item" style="visibility: hidden;">dev</my-obj>
+    <my-obj id="btn_dev"  class="menu_item" style="display: none">dev</my-obj>
 </div>
     
 <my-obj id="btn_fwd"  class="menu_fwd" style="visibility: visible; "></my-obj>
